# tree-sitter-pkl

./: .editorconfig  .gitattributes  .gitignore  .npmignore  CHANGELOG.adoc  CMakeLists.txt  CONTRIBUTING.adoc  Cargo.toml  Makefile  NOTICE.txt  Package.swift  README.adoc  README.md  SECURITY.adoc  SECURITY.md  binding.gyp  build.gradle.kts  go.mod  grammar.js  licenserc.toml  package-lock.json  package.json  pyproject.toml  settings.gradle.kts  setup.py  tree-sitter.json  tsconfig.json
.circleci/: config.pkl  config.yml
.github/: PklProject  dependabot.yml  index.pkl
.github/workflows/: __lockfile__.yml  build.yml  main.yml  prb.yml  release.yml
bindings/c/: tree-sitter-pkl.h  tree-sitter-pkl.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pkl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPkl/: pkl.h
bindings/swift/TreeSitterPklTests/: TreeSitterPklTests.swift
buildSrc/: build.gradle.kts  settings.gradle.kts
corpus/class/: fixedModifier.txt
corpus/expr/: importExpr.txt
corpus/module/: moduleHeader1.txt  moduleHeader2.txt  moduleHeader4.txt
corpus/number/: numberUnderscores.txt
corpus/snippetTests/: snippetTest.txt
corpus/snippetTests/annotation/: annotation1.txt  annotation2.txt  annotation3.txt  annotation4.txt  annotation5.txt  annotation6.txt  annotationIsNotExpression.txt  annotationIsNotExpression2.txt  deprecated1.txt  deprecated2.txt  deprecated3.txt  deprecatedNoRepeatedWarnings.txt  deprecatedWithMessage1.txt  deprecatedWithMessage2.txt  deprecatedWithMessage3.txt  deprecationSuperMethod.txt
corpus/snippetTests/api/: Resource.txt  any.txt  anyConverter.txt  baseModule.txt  benchmarkModule.txt  dataSize.txt  duration.txt  dynamic.txt  float.txt  int.txt  intseq.txt  jsonParser1.txt  jsonParser2.txt  jsonParser3.txt  jsonParser4.txt  jsonParser5.txt  jsonRenderer1.json.txt  jsonRenderer2.json.txt  jsonRenderer2b.txt  jsonRenderer3.json.txt  jsonRenderer4.txt  jsonRenderer5.txt  jsonRenderer6.json.txt  jsonRenderer7.txt  jsonRenderer8.txt  jsonRendererEmptyComposites.txt  jsonnetRenderer1.jsonnet.txt  jsonnetRenderer2.jsonnet.txt  jsonnetRenderer3.jsonnet.txt  jsonnetRenderer4.txt  jsonnetRenderer5.txt  jsonnetRenderer6.jsonnet.txt  jsonnetRenderer7.txt  list.txt  listNullable.txt  listing.txt  map.txt  mapping.txt  mathModule.txt  module.txt  (+97 more)
corpus/snippetTests/basic/: amendsChains.txt  as.txt  as2.txt  as3.txt  baseModule.txt  boolean.txt  comments.txt  constModifier.txt  constModifier2.txt  constModifier3.txt  dataSize.txt  duration.txt  exceptions.txt  fixedProperty1.txt  if.txt  (+79 more)
corpus/string/: multiLineInterpolation.txt  multiline.txt  singleLineInterpolation.txt
gradle/: libs.versions.toml
queries/: highlights.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c  synctests.ts
(+1316 files in other folders)
