[package]
name = "tree-sitter-pkl"
description = "Pkl grammar for the tree-sitter parsing library"
version = "0.18.1"
keywords = ["incremental", "parsing", "pkl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/apple/tree-sitter-pkl"
edition = "2018"
license = "Apache-2.0"
authors = [
  "pkl-oss@group.apple.com"
]

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.6"

[build-dependencies]
cc = "1.0"
