[package]
name = "tree-sitter-pkl"
description = "Parser for Pkl programming language"
version = "0.20.0"
authors = ["The Pkl Authors <pkl-oss@group.apple.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pkl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/apple/tree-sitter-pkl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE.txt",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
